<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/view_list"
            android:title="Browse" />
        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/ic_filter_outline_grey600_48dp"
            android:title="Filter" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_outline_grey600_48dp"
            android:title="My Profile" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_google_maps_grey600_48dp"
            android:title="Map" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_variant_grey600_48dp"
            android:title="Logout" />
    </group>

    <item android:title="View">
        <menu>
            <item
                android:id="@+id/nav_requester"
                android:icon="@drawable/ic_circle_outline_grey600_48dp"
                android:title="My Tasks" />
            <item
                android:id="@+id/nav_assigned"
                android:icon="?android:attr/listChoiceIndicatorMultiple"
                android:title="My Assigned" />
            <item
                android:id="@+id/nav_accepted"
                android:icon="@drawable/ic_checkbox_blank_circle_grey600_48dp"
                android:title="My Accepted" />
            <item
                android:id="@+id/nav_provider"
                android:icon="@drawable/ic_google_circles_extended_grey600_48dp"
                android:title="My Bids" />
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_bell_outline_black_48dp"
                android:title="Notifications" />
            <item
                android:id="@+id/nav_starred"
                android:icon="@drawable/ic_star_outline_grey600_48dp"
                android:title="Starred" />
            <item
                android:id="@+id/nav_all"
                android:icon="@drawable/ic_google_circles_communities_grey600_48dp"
                android:title="All" />
        </menu>
    </item>
</menu>
